--- a/html/index.html
+++ b/html/index.html
@@ -4,20 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Model your robots in URDF and show them here!</title>
- 
+
 
 
 <script src="./scripts/qrcode.js"></script>
 
 <script>
-{% if robot_start_id is defined %}
-window.start_with_default=false;
-window.robot_id={{robot_start_id}};
-
-{% else %}
 window.start_with_default=true;
 window.robot_id=5629499534213120;
- {% endif %}
  </script>
 
 
@@ -40,20 +34,12 @@ window.robot_id=5629499534213120;
 <div id="robodiv">
 
 <form id="robotform"><div><b>Robot's URDF</b>
-{% if url_linktext is defined %}
-<span style="float:right">
-<a href="{{url}}">{{url_linktext}}</a>
-</span>
-{% endif%}
 </div>
 <div id="robottextbox">
 <textarea id="robottext" name="robottext" rows="15" id="robottext" placeholder="Place robot's URDF here"></textarea>
 </div>
 <br>
 <button type="button" id="loadbutton">Load robot URDF</button>
-{% if user %}
-<button type="button" id="saverobot">Save robot</button> <input type="checkbox" name="visible" id="visible">Visible</input>
-{% endif %}
 <button type="button" id="armode">AR Mode</button>
 <span id="qrcode" style="z-index:2"></span>
 <br>
@@ -65,9 +51,8 @@ window.robot_id=5629499534213120;
 <br>
 <!--</form>-->
 Example robots:
-{% for item in linki %}
-        <a href="../testowe/{{ item[1] }}" target="_blank" class="robotlink">{{ item[0] }}</a> 
-    {% endfor %}
+    <a href="/testowe/pi_robot_urdf.xml" target="_blank" class="robotlink">PI Robot</a>
+    <a href="/testowe/r2d2.xml" target="_blank" class="robotlink">R2D2</a>
 </div>
 <div id="animdiv"><!--<form id="animform">--><div><b>Robot's poses CSV</b></div><div id="jointnames"> .</div><textarea name="animcsv" rows="2" id="robotcsv" placeholder="Place your CSV(comma seperated values) of robot's poses here"></textarea><br>
 <button type="button" id="loadcsv">Load CSV</button>
